// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup should render with both elements 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy fNzmXy max-w-xs"
  >
    <div
      class="sc-AxiKw haRmku"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <div
      class="sc-AxirZ sc-AxhCb dJFQuU"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm EVFSA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the left 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy fNzmXy max-w-xs"
  >
    <div
      class="sc-AxiKw haRmku"
    >
      <span
        data-testid="start"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm EVFSA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup should render with element on the right 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhUy fNzmXy max-w-xs"
  >
    <div
      class="sc-AxirZ sc-AxhCb dJFQuU"
    >
      <span
        data-testid="end"
      >
        $
      </span>
    </div>
    <input
      class="sc-AxjAm EVFSA overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 pl-13"
      data-testid="Input"
      placeholder="Amount"
      type="text"
    />
  </div>
</DocumentFragment>
`;
